<resources>
	<string name="app_name">SEA</string>
	<string name="action_settings">Settings</string>
	<string name="preference_file_key" translatable="false">com.rener.sea.PREFERENCE_FILE_KEY</string>
	<string name="username">username</string>
	<string name="password">password</string>
	<string name="button_login">Log In</string>
	<string name="login_status_default">Enter credentials!</string>
	<string name="main_credentials_default">You are not logged in.</string>
	<string name="title_activity_main" translatable="false">SEA</string>
	<string name="key_saved_username" translatable="false">USERNAME</string>
	<string name="no_username">No user</string>
	<string name="no_data">No data found</string>
	<string name="key_saved_password" translatable="false">PASSWORD</string>
	<string name="db_name" translatable="false">SEA.db</string>
	<string name="person_first_name">first name</string>
	<string name="person_middle_name">middle name</string>
	<string name="person_last_name1">1st last name</string>
	<string name="person_last_name2">2nd last name</string>
	<string name="person_email">email</string>
	<string name="person_phone_number">phone number</string>
	<string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="name">name</string>
	<string name="location_name">location name</string>
	<string name="license">license</string>
	<string name="address">Address</string>
	<string name="address_line1">address line 1</string>
	<string name="address_line2">address line 2</string>
	<string name="address_city">city</string>
	<string name="address_zip_code">zip code</string>
	<string name="no_owner">No owner on file</string>
	<string name="no_manager">No manager on file</string>
	<string name="no_agent">No agent assigned</string>
	<string name="owner_label">Owner</string>
	<string name="manager_label">Manager</string>
	<string name="agent_label">Assigned agent</string>
	<string name="subject_label">Subject</string>
	<string name="name_label">Name</string>
	<string name="date_label">Date</string>
	<string name="location_label">Location</string>
	<string name="creator_label">Creator</string>
	<string name="report_type">Type</string>
	<string name="login_ak">Login successful</string>
	<string name="login_nak">Wrong username or password</string>
	<string name="logout">Logout</string>
	<string name="edit_report">Edit Report</string>
	<string name="report_name">report name</string>
	<string name="report_location">report location</string>
	<string name="save_report">Save Report</string>
	<string name="date">date</string>
	<string name="edit_person">Edit Ganadero</string>
	<string name="save_person">Save Person</string>
	<string name="edit_location">Edit Location</string>
	<string name="save_location">Save Location</string>
	<string name="new_person">New Person</string>
	<string name="new_location">new Location</string>
	<string name="new_report">New Report</string>
	<string name="reports">Reports</string>
	<string name="people">Ranchers</string>
	<string name="locations">Locations</string>
	<string name="location">location</string>
	<string name="subject">subject</string>
	<string name="flowchart">flowchart</string>
	<string name="done">Done</string>
	<string name="open_hint">Enter data here</string>
	<string name="submit">Submit</string>
	<string name="notes">notes</string>
	<string name="manager">manager</string>
	<string name="owner">owner</string>
	<string name="agent">agent</string>
	<string name="date_format">MMM/dd/yy</string>
	<string name="date_format_long">EEEE, MMMM d, yyyy</string>
	<string name="time_format">hh:mm a</string>
	<string name="select_location">select a location</string>
	<string name="select_subject">select a subject</string>
	<string name="select_survey">select a survey</string>
	<string name="discard_report">Discard Report</string>
	<string name="appointment">appointment</string>
	<string name="add_appointment">add appointment</string>
	<string name="save_appointment">save appointment</string>
	<string name="no_appointment">no appointment set</string>
	<string name="view_appointments">View Appointments</string>
	<string name="appointment_purpose">purpose</string>
	<string name="no_purpose_set">No purpose set</string>
	<string name="cancel_appointment">Cancel</string>
	<string name="notes_label">Notes:</string>
	<string name="flowchart_label">Flowchart</string>
	<string name="appointment_label">Appointment</string>
	<string name="appointment_set_by_label">Set by</string>
	<string name="purpose_label">Purpose</string>
	<string name="no_connection">No connection</string>
	<string name="synchronizing">Synchronizing…</string>
	<string name="sync_success">Sync successful!</string>
	<string name="sync_fail">Sync failed!</string>
	<string name="duplicate_license_message">License already exists</string>
	<string name="next_question">Next question</string>
	<string name="continue_report">Continue</string>
	<string name="login">Login</string>
	<string name="no_reports">No reports found</string>
	<string name="no_people">No people found</string>
	<string name="no_locations">No locations found</string>
	<string name="no_flowcharts">No flowcharts found</string>
	<string name="synchronize">Synchronize</string>
	<string name="creating_report">Creating a report</string>
	<string name="select_owner">select owner</string>
	<string name="select_manager">select manager</string>
	<string name="licence_label">Licence</string>
	<string name="address_label">Address</string>
	<string name="survey_completed">Survey complete</string>
	<string name="default_report_name">Unnamed Report</string>
	<string name="no_location">No location set</string>
	<string name="search_hint">Search…</string>
	<string name="empty_first_name">First name cannot be empty</string>
	<string name="empty_last_name">Last name cannot be empty</string>
	<string name="empty_licence">Licence is empty</string>
	<string name="empty_location_name">Name cannot be empty</string>
	<string name="invalid_licence">Invalid licence</string>
	<string name="past_date_message">Date cannot be in the past</string>
	<string name="appointments">Appointments</string>
	<string name="date_format_medium">EEE MMM/dd/yy hh:mm a</string>
	<string name="email_label">Email Address</string>
	<string name="phone_number_label">Phone Number</string>
	<string name="no_email_clients_installed">There are no email apps installed.</string>
	<string name="key_saved_passhash" translatable="false">PASSHASH</string>
	<string name="long_password_error">Password is too long</string>
	<string name="app_name_long">Agricultural Extension Service</string>
	<string name="empty_password_error">Please provide a password</string>
	<string name="no_email">No email on file</string>
	<string name="no_phone">No phone number on file</string>
	<string name="confirm_discard_report_title">Discard Report</string>
	<string name="confirm_discard_report_message">Are you sure you want to discard this report?</string>
	<string name="cancel">Cancel</string>
	<string name="discard">Discard</string>
	<string name="empty_name">Name cannot be empty</string>
	<string name="flowchart_not_found">Flowchart not found</string>
	<string name="location_not_found">Location not found</string>
	<string name="user_not_found">User not found</string>
	<string name="invalid_email">Please give  a valid email address</string>
	<string name="confirm_flowchart_title">Flowchart confirmation</string>
	<string name="confirm_flowchart_message">Would you like to start a survey with flow or open method?</string>
	<string name="method_flow">Flow</string>
	<string name="method_open">Open</string>
	<string name="no_notes">No notes found</string>
	<string name="invalid_decimal">Please input a valid decimal number</string>
	<string name="confirm_submit_title">Report Submission Confirmation</string>
	<string name="confirm_submit_message">Are you sure you wish to submit this report?</string>
	<string name="cond_hint">Enter a valid number here</string>
	<string name="login_progress_message">Logging in…</string>
</resources>
