<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/reports"
		  android:title="@string/reports"
		  android:icon="@drawable/ic_action_view_as_list"
		  android:showAsAction="always"
		  android:orderInCategory="0"
		/>

	<item android:id="@+id/people"
		  android:title="@string/people"
		  android:icon="@drawable/ic_action_group"
		  android:showAsAction="always"
		  android:orderInCategory="0"
		/>

	<item android:id="@+id/locations"
		  android:title="@string/locations"
		  android:icon="@drawable/ic_action_place"
		  android:showAsAction="always"
		  android:orderInCategory="0"
		/>

	<item android:id="@+id/appointments"
		  android:title="@string/view_appointments"
		  android:icon="@drawable/ic_action_go_to_today"
		  android:showAsAction="ifRoom"
		  android:orderInCategory="0"
		/>

</menu>