<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/report_name_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginStart="4dp"
			android:textStyle="bold"
			android:text="@string/name_label"
			/>

		<EditText
			android:id="@+id/report_edit_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:gravity="center_horizontal"
			android:ellipsize="start"
			android:hint="@string/report_name"
			android:inputType="textCapWords"/>

		<TextView
			android:id="@+id/report_notes_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginStart="4dp"
			android:textStyle="bold"
			android:text="@string/notes_label"
			/>

		<EditText
			android:id="@+id/report_edit_notes"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:minLines="5"
			android:hint="@string/notes"
			/>

		<TextView
			android:id="@+id/appointment_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginStart="4dp"
			android:textStyle="bold"
			android:text="@string/appointment_label"
			/>

		<FrameLayout
			android:id="@+id/report_edit_appointment_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:padding="4dp"
			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/report_edit_cancel_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableStart="@drawable/ic_action_cancel"
				android:text="@string/cancel"/>

			<Button
				android:id="@+id/report_edit_save_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableStart="@drawable/ic_action_accept"
				android:text="@string/save"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>