<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  tools:context=".LoginActivity">

	<Toolbar
		android:id="@+id/login_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:paddingStart="12dp"
		android:paddingEnd="12dp"
		android:background="@color/rum_theme_color"
		android:navigationIcon="@mipmap/ic_launcher"
		android:title="@string/app_name_long"
		android:subtitle="@string/login">
	</Toolbar>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/login_toolbar"
		android:orientation="vertical"
		android:gravity="center_vertical"
		android:paddingLeft="64dp"
		android:paddingRight="64dp"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin">

		<EditText
			android:id="@+id/field_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username"
			android:inputType="textEmailAddress"
			/>

		<EditText
			android:id="@+id/field_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLength="72"
			android:hint="@string/password"
			android:inputType="textPassword"
			/>

		<Button
			android:id="@+id/login_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/button_login"
			/>

	</LinearLayout>

</RelativeLayout>
