<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/action_settings"
		  android:title="@string/action_settings"
		  android:showAsAction="never"
		  android:visible="false"
		  android:orderInCategory="98"
		/>

	<item android:id="@+id/action_logout"
		  android:title="@string/logout"
		  android:showAsAction="never"
		  android:orderInCategory="99"
		/>

	<item android:id="@+id/sync"
		  android:title="@string/synchronize"
		  android:showAsAction="never"
		  android:orderInCategory="80"
		  android:icon="@drawable/ic_action_refresh"
		  />

	<item android:id="@+id/sync_full"
		  android:title="Synchronize FULL"
		  android:showAsAction="never"
		  android:orderInCategory="81"
		  android:visible="false"
		  />


</menu>