<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/edit_location_action"
		  android:title="@string/edit_location"
		  android:icon="@drawable/ic_action_edit"
		  android:visible="true"
		  android:showAsAction="always"
		  android:orderInCategory="22"
		  />

	<item android:id="@+id/save_location_action"
		  android:title="@string/save_location"
		  android:icon="@drawable/ic_action_save"
		  android:visible="false"
		  android:showAsAction="always"
		  android:orderInCategory="22"
		  />

	<item android:id="@+id/new_report_location_action"
		  android:title="@string/new_report"
		  android:icon="@drawable/ic_action_new_event"
		  android:visible="true"
		  android:showAsAction="always"
		  android:orderInCategory="11"
		/>

</menu>