<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
	
	<ViewFlipper
		android:id="@+id/location_flipper"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/location_show_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<TextView
			android:id="@+id/location_text_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/no_data"
			/>

			<TextView
				android:id="@+id/location_text_license"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/address_text_line1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/address_text_line2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/address_text_city"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/address_text_zip_code"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/location_text_owner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/location_text_manager"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>

			<TextView
				android:id="@+id/location_text_agent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_data"
				/>
	
			<Button
				android:id="@+id/button_edit_location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/edit"
				/>
	
		</LinearLayout>
	
		<LinearLayout
			android:id="@+id/location_edit_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="16dp">

			<EditText
			android:id="@+id/location_edit_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/location_name"
			android:inputType="text"
			/>

			<EditText
				android:id="@+id/location_edit_license"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/license"
				android:inputType="number"
				/>

			<EditText
				android:id="@+id/address_edit_line1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/address_line1"
				android:inputType="textPostalAddress"
				/>

			<EditText
				android:id="@+id/address_edit_line2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/address_line2"
				android:inputType="textPostalAddress"
				/>

			<EditText
				android:id="@+id/address_edit_city"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/address_city"
				android:inputType="textPostalAddress"
				/>

			<EditText
				android:id="@+id/address_edit_zip_code"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/address_zip_code"
				android:inputType="number"
				/>

			<Spinner
				android:id="@+id/location_owner_spinner"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				</Spinner>

			<Spinner
				android:id="@+id/location_manager_spinner"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			</Spinner>

			<Spinner
				android:id="@+id/location_agent_spinner"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			</Spinner>

			<Button
				android:id="@+id/button_save_location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/save"
				/>
		</LinearLayout>

	</ViewFlipper>

</RelativeLayout>