<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="4dp"
				android:paddingEnd="8dp">

	<TextView
		android:id="@+id/report_list_item_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_alignParentEnd="true"
		android:text="@string/date"
		/>

	<TextView
		android:id="@+id/report_list_item_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_toStartOf="@id/report_list_item_date"
		android:ellipsize="end"
		android:textSize="16sp"
		android:singleLine="true"
		android:hint="@string/default_report_name"
		/>

	<TextView
		android:id="@+id/report_list_item_location"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@id/report_list_item_name"
		android:layout_toStartOf="@id/report_list_item_date"
		android:ellipsize="end"
		android:hint="@string/no_location"
		/>

</RelativeLayout>