<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/appointment_edit_layout"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

		<EditText
			android:id="@+id/appointment_purpose_edit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_margin="8dp"
			android:hint="@string/appointment_purpose"
			/>

		<LinearLayout
			android:id="@+id/datetime_pickers_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_horizontal">

			<DatePicker
				android:id="@+id/appointment_date_picker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:calendarViewShown="false">
			</DatePicker>

			<TimePicker
				android:id="@+id/appointment_time_picker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TimePicker>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:orientation="horizontal"
			android:gravity="center_horizontal">

			<Button
				android:id="@+id/report_cancel_appointment_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableStart="@drawable/ic_action_discard"
				android:text="@string/cancel_appointment"
				/>

			<Button
				android:id="@+id/report_save_appointment_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginLeft="16dp"
				android:drawableStart="@drawable/ic_action_save"
				android:text="@string/save_appointment"
				/>

		</LinearLayout>

</LinearLayout>